horizontal scroll removed and spelling mistake  issue resolved

--- a/angular/coreui-angular-admin/src/app/views/accounting/miscpayment/miscpayment.component.scss
+++ b/angular/coreui-angular-admin/src/app/views/accounting/miscpayment/miscpayment.component.scss
@@ -55,6 +55,7 @@ float: left;
   background-color: #1aa808;
 }
 
-div.ex3 {
-  overflow: auto;
+.noscroll{
+  overflow: hidden; /* Hide scrollbars */
 }
+
