--- a/angular/coreui-angular-admin/src/app/views/accounting/miscreceipt/miscreceipt.component.scss
+++ b/angular/coreui-angular-admin/src/app/views/accounting/miscreceipt/miscreceipt.component.scss
@@ -53,3 +53,7 @@ float: left;
 .saveStickyFooterButton{
   background-color: #1aa808;
 }
+
+.noscroll{
+  overflow: hidden; /* Hide scrollbars */
+}
